# hands-on-cpp-patterns

Chapter04/: CMakeLists.txt
Chapter08/: CMakeLists.txt
Chapter09/: CMakeLists.txt
Chapter10/: CMakeLists.txt
Chapter11/: CMakeLists.txt
